--- a/MyQtProjects/GridViewTest/qml.qrc
+++ b/MyQtProjects/GridViewTest/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Page1.qml</file>
-        <file>Page1Form.ui.qml</file>
+        <file>CardOne.qml</file>
+        <file>CardTwo.qml</file>
     </qresource>
 </RCC>
